auth功能logout完善
